# meson-tests

./: meson.build  meson.options  readme.md
.builds/: alpine.yml
common/10 man install/: meson.build
common/101 testframework options/: meson.build
common/102 extract same name/: meson.build
common/103 has header symbol/: meson.build
common/104 has arg/: meson.build
common/105 generatorcustom/: meson.build
common/111 pathjoin/: meson.build
common/117 shared module/: meson.build
common/118 llvm ir and assembly/: meson.build
common/119 cpp and asm/: meson.build
common/12 data/: meson.build
common/120 extract all shared library/: meson.build
common/121 object only target/: meson.build  obj_generator.py
common/127 generated assembly/: meson.build
common/128 build by default targets in tests/: meson.build
common/13 pch/: meson.build
common/130 include order/: meson.build
common/132 get define/: meson.build
common/133 c cpp and asm/: meson.build
common/135 custom target object output/: meson.build  obj_generator.py
common/135 custom target object output/objdir/: meson.build
common/137 whole archive/: meson.build
common/138 C and CPP link/: meson.build
common/14 configure file/: config6.h.in  meson.build  prog6.c
common/140 custom target multiple outputs/: meson.build
common/141 special characters/: check_quoting.py  meson.build
common/145 recursive linking/circular/: meson.build
common/147 simd/: meson.build
common/151 duplicate source names/: meson.build
common/153 wrap file should not failed/: meson.build
common/167 subproject nested subproject dirs/: meson.build
common/168 preserve gendir/: meson.build
common/173 as-needed/: meson.build
common/176 subproject version/: meson.build
common/178 bothlibraries/: meson.build
common/179 escape and unicode/: meson.build
common/18 includedir/: meson.build
common/180 has link arg/: meson.build
common/182 find override/: meson.build
common/183 partial dependency/: meson.build
common/184 openmp/: meson.build
common/187 args flattening/: meson.build
common/189 check header/: meson.build
common/190 install_mode/: meson.build
common/192 feature option/: meson.build
common/196 subproject with features/: meson.build
common/197 function attributes/: meson.build
common/199 argument syntax/: meson.build
common/200 install name_prefix name_suffix/: meson.build  test.json
common/201 kwarg entry/: meson.build
common/21 target arg/: meson.build
common/211 dependency get_variable method/: meson.build
common/212 source set configuration_data/: meson.build
common/213 source set dictionary/: meson.build
common/214 source set custom target/: meson.build
common/215 source set realistic example/: meson.build
common/216 custom target input extracted objects/: meson.build
common/219 include_type dependency/: meson.build
common/22 object extraction/: meson.build
common/220 fs module/: meson.build
common/221 zlib/: meson.build
common/223 persubproject options/: meson.build
common/226 link depends indexed custom target/: meson.build
common/227 very long command line/: meson.build
common/240 dependency native host == build/: meson.build
common/247 deprecated option/: meson.build  meson_options.txt
common/248 install_emptydir/: meson.build
common/250 system include dir/: meson.build
common/251 add_project_dependencies/: meson.build
common/254 long output/: dumper.c
common/257 generated header dep/: meson.build
common/259 preprocess/: meson.build
common/26 find program/: meson.build
common/261 testcase clause/: meson.build
common/262 generator chain/: meson.build
common/263 internal dependency includes in checks/: meson.build
common/264 required keyword in has functions/: meson.build
common/265 default_options dict/: meson.build
common/266 format string/: meson.build
common/268 install functions and follow symlinks/: meson.build
common/269 configure file output format/: meson.build
common/271 env in generator.process/: meson.build
common/272 unity/: meson.build
common/273 both libraries/: meson.build
common/274 customtarget exe for test/: meson.build
common/274 environment/: meson.build
common/275 required keyword in compiles functions/: meson.build
common/276 generator custom_tgt subdir/: meson.build
common/276 required keyword in compiles functions/: meson.build
common/277 custom target private dir/: meson.build
common/277 generator custom_tgt subdir/: meson.build
common/279 pkgconfig override/: meson.build
common/28 try compile/: meson.build
common/280 pkgconfig-gen/: meson.build
common/29 compiler id/: meson.build
common/3 static/: meson.build
common/32 has header/: meson.build
common/33 run program/: meson.build
common/35 string operations/: meson.build
common/36 has function/: meson.build
common/37 has member/: meson.build
common/4 shared/: meson.build
common/40 options/: meson.build  meson_options.txt
common/41 test args/: meson.build  tester.c
common/42 subproject/: meson.build
common/44 pkgconfig-gen/: meson.build  test.json
common/48 file grabber/: meson.build
common/51 run target/: fakeburner.py  meson.build
common/52 object generator/: meson.build
common/53 install script/: meson.build
common/59 install subdir/: meson.build
common/66 vcstag/: meson.build
common/67 modules/: meson.build
common/71 ctarget dependency/: meson.build
common/74 file object/: meson.build
common/81 extract all/: meson.build
common/87 default options/: meson.build
common/88 dep fallback/: meson.build
common/89 default library/: ef.cpp  meson.build
common/9 header install/: meson.build
common/90 gen extra/: meson.build
common/98 subproject subdir/: meson.build
frameworks/7 gnome/: meson.build  test.json
keyval/1 basic/: meson.build
nasm/1 configure file/: meson.build
nasm/2 asm language/: meson.build
nasm/3 nasm only/: meson.build
nasm/4 through configure/: meson.build
native/4 tryrun/: meson.build
tools/: find_missing_tests.sh
(+72 files in other folders)
