project('meson-tests')

fs = import('fs')

host_is_x86 = host_machine.cpu_family().startswith('x86')

is_git_repo = fs.is_dir(meson.current_source_dir() / '.git')

tests = []

foreach t : [
    ['common/1 trivial'],
    ['common/2 cpp', {'cpp': true}],
    ['common/3 static'],
    ['common/4 shared'],
    ['common/5 linkstatic'],
    ['common/6 linkshared',  {'cpp': true}],
    ['common/7 mixed', {'cpp': true}],
    ['common/8 install', {'python': true}],
    ['common/9 header install'],
    ['common/10 man install'],
    ['common/11 subdir'],
    ['common/12 data'],
    ['common/13 pch', {'cpp': true, 'python': true}],
    ['common/14 configure file', {'python': true}],
    ['common/15 if'],
    ['common/16 comparison'],
    ['common/17 array'],
    ['common/18 includedir'],
    ['common/19 header in file list'],
    ['common/20 global arg', {'cpp': true}],
    ['common/21 target arg', {'cpp': true}],
    ['common/22 object extraction', {'python': true}],
    ['common/23 endian'],
    ['common/24 library versions'],
    ['common/25 config subdir'],
    ['common/26 find program', {'python': true}],
    ['common/27 multiline string'],
    ['common/28 try compile', {'cpp': true}],
    ['common/29 compiler id'],
    ['common/30 sizeof', {'cpp': true}],
    ['common/31 define10'],
    ['common/32 has header', {'cpp': true}],
    ['common/33 run program', {'python': true}],
    ['common/34 logic ops'],
    ['common/35 string operations'],
    ['common/36 has function', {'cpp': true}],
    ['common/37 has member', {'cpp': true}],
    ['common/38 alignment', {'cpp': true}],
    ['common/39 library chain'],
    ['common/40 options'],
    ['common/41 test args', {'python': true}],
    ['common/42 subproject'],
    ['common/43 subproject options'],
    ['common/44 pkgconfig-gen', {'python': true}],
    ['common/45 custom install dirs'],
    ['common/46 subproject subproject'],
    ['common/47 same file name'],
    ['common/48 file grabber'],
    ['common/49 custom target', {'python': true, 'skip_analyze': true}],
    ['common/50 custom target chain', {'python': true}],
    ['common/51 run target', {'python': true}],
    ['common/52 object generator', {'python': true}],
    ['common/53 install script', {'python': true, 'skip_uninstall': true}],
    ['common/54 custom target source output', {'python': true}],
    ['common/55 exe static shared'],
    ['common/56 array methods'],
    ['common/57 custom header generator', {'python': true}],
    ['common/58 multiple generators', {'cpp': true, 'python': true}],
    ['common/59 install subdir'],
    ['common/60 foreach'],
    ['common/61 number arithmetic'],
    ['common/62 string arithmetic'],
    ['common/63 array arithmetic'],
    ['common/64 arithmetic bidmas'],
    ['common/65 build always', {'python': true}],
    ['common/66 vcstag', {'python': true}],
    ['common/67 modules'],
    ['common/68 should fail'],
    ['common/69 configure file in custom target', {'python': true}],
    ['common/70 external test program', {'python': true}],
    ['common/71 ctarget dependency', {'python': true}],
    ['common/72 shared subproject'],
    ['common/73 shared subproject 2'],
    ['common/74 file object'],
    ['common/75 custom subproject dir'],
    ['common/76 has type', {'cpp': true}],
    ['common/77 extract from nested subdir'],
    ['common/78 internal dependency'],
    ['common/79 same basename'],
    ['common/80 declare dep'],
    ['common/81 extract all'],
    ['common/82 add language', {'cpp': true}],
    ['common/83 identical target name in subproject', {'python': true}],
    ['common/84 plusassign'],
    ['common/85 skip subdir'],
    ['common/86 private include', {'python': true}],
    ['common/87 default options', {'cpp': true}],
    ['common/88 dep fallback', {'python': true}],
    ['common/89 default library', {'cpp': true}],
    ['common/90 gen extra', {'python': true}],
    ['common/91 benchmark'],
    ['common/92 test workdir', {'python': true}],
    ['common/93 suites'],
    ['common/94 threads', {'cpp': true}],
    ['common/95 manygen', {'python': true}],
    ['common/96 stringdef'],
    ['common/97 find program path', {'python': true}],
    ['common/98 subproject subdir'],
    ['common/99 postconf', {'python': true}],
    ['common/100 postconf with args', {'python': true}],
    ['common/101 testframework options'],
    ['common/102 extract same name'],
    ['common/103 has header symbol', {'cpp': true}],
    ['common/104 has arg', {'cpp': true}],
    ['common/105 generatorcustom', {'python': true}],
    ['common/106 multiple dir configure file', {'python': true}],
    ['common/107 spaces backslash'],
    ['common/108 ternary'],
    ['common/109 custom target capture', {'python': true}],
    ['common/110 allgenerate', {'cpp': true, 'python': true}],
    ['common/111 pathjoin'],
    ['common/112 subdir subproject'],
    ['common/113 interpreter copy mutable var on assignment'],
    ['common/114 skip'],
    ['common/115 subproject project arguments', {'cpp': true}],
    ['common/116 test skip'],
    ['common/117 shared module'],
    ['common/118 llvm ir and assembly', {'asm': true, 'cpp': true}],
    ['common/119 cpp and asm', {'asm': true, 'cpp': true}],
    ['common/120 extract all shared library'],
    ['common/121 object only target', {'python': true}],
    ['common/122 no buildincdir'],
    ['common/123 custom target directory install', {'python': true}],
    ['common/124 dependency file generation'],
    ['common/125 configure file in generator', {'python': true}],
    ['common/126 generated llvm ir', {'python': true}],
    ['common/127 generated assembly', {'asm': true, 'python': true}],
    ['common/128 build by default targets in tests', {'python': true}],
    ['common/129 build by default', {'python': true}],
    ['common/130 include order', {'python': true}],
    ['common/131 override options'],
    ['common/132 get define', {'cpp': true}],
    ['common/133 c cpp and asm', {'cpp': true}],
    ['common/134 compute int', {'cpp': true}],
    ['common/135 custom target object output', {'python': true}],
    ['common/136 empty build file'],
    ['common/137 whole archive'],
    ['common/138 C and CPP link', {'cpp': true}],
    ['common/139 mesonintrospect from scripts', {'python': true}],
    ['common/140 custom target multiple outputs', {'python': true}],
    ['common/141 special characters', {'python': true}],
    ['common/142 nested links'],
    ['common/143 list of file sources', {'python': true}],
    ['common/144 link depends custom target', {'python': true}],
    ['common/145 recursive linking'],
    ['common/146 library at root'],
    ['common/147 simd', {'failing': true}],
    ['common/148 shared module resolving symbol in executable'],
    ['common/149 dotinclude'],
    ['common/150 reserved targets', {'python': true}],
    ['common/151 duplicate source names'],
    ['common/152 index customtarget', {'python': true}],
    ['common/153 wrap file should not failed', {'git_clean': is_git_repo}],
    ['common/154 includedir subproj'],
    ['common/155 subproject dir name collision'],
    ['common/156 config tool variable', {'failing': true}],
    ['common/157 custom target subdir depend files', {'python': true}],
    ['common/158 disabler', {'skip_analyze': true}],
    ['common/159 array option'],
    ['common/160 custom target template substitution', {'python': true}],
    ['common/161 not-found dependency'],
    ['common/162 subdir if_found'],
    ['common/163 default options prefix dependent defaults'],
    ['common/164 dependency factory'],
    ['common/165 get project license'],
    ['common/166 yield'],
    ['common/167 subproject nested subproject dirs'],
    ['common/168 preserve gendir', {'python': true}],
    ['common/169 source in dep', {'cpp': true, 'python': true}],
    ['common/170 generator link whole', {'python': true}],
    ['common/171 initial c_args'],
    ['common/172 identical target name in subproject flat layout'],
    ['common/173 as-needed', {'cpp': true}],
    ['common/174 ndebug if-release enabled'],
    ['common/175 ndebug if-release disabled'],
    ['common/176 subproject version'],
    ['common/177 subdir_done'],
    ['common/178 bothlibraries', {'cpp': true, 'python': true}],
    ['common/179 escape and unicode', {'python': true}],
    ['common/180 has link arg', {'cpp': true}],
    ['common/181 same target name flat layout'],
    ['common/182 find override', {'python': true}],
    ['common/183 partial dependency'],
    ['common/184 openmp', {'failing': true}],
    ['common/185 same target name'],
    ['common/186 test depends', {'python': true}],
    ['common/187 args flattening'],
    ['common/188 dict'],
    ['common/189 check header', {'cpp': true}],
    ['common/190 install_mode'],
    ['common/191 subproject array version'],
    ['common/192 feature option'],
    ['common/193 feature option disabled'],
    ['common/194 static threads'],
    ['common/195 generator in subdir', {'python': true}],
    ['common/196 subproject with features'],
    ['common/197 function attributes', {'cpp': true}],
    ['common/198 broken subproject'],
    ['common/199 argument syntax'],
    ['common/200 install name_prefix name_suffix'],
    ['common/201 kwarg entry'],
    ['common/202 custom target build by default', {'python': true}],
    ['common/203 find_library and headers'],
    ['common/204 line continuation'],
    [
        'common/205 native file path override',
        {
            'cpp': true,
            'option_matrix': {
                'bindir': ['custom_bindir'],
            },
        },
    ],
    ['common/206 tap tests'],
    ['common/207 warning level 0', {'cpp': true}],
    ['common/208 link custom', {'python': true}],
    ['common/209 link custom_i single from multiple', {'python': true}],
    ['common/210 link custom_i multiple from multiple', {'python': true}],
    ['common/211 dependency get_variable method', {'cpp': true}],
    ['common/212 source set configuration_data'],
    ['common/213 source set dictionary'],
    ['common/214 source set custom target', {'python': true}],
    ['common/215 source set realistic example', {'cpp': true}],
    ['common/216 custom target input extracted objects', {'python': true}],
    ['common/217 test priorities', {'python': true}],
    ['common/218 include_dir dot'],
    ['common/219 include_type dependency', {'cpp': true}],
    ['common/220 fs module'],
    ['common/221 zlib'],
    [
        'common/222 native prop',
        {'failing': true, 'skip': 'requires machine files'},
    ],
    ['common/223 persubproject options', {'cpp': true}],
    ['common/224 arithmetic operators'],
    ['common/225 link language', {'cpp': true}],
    ['common/226 link depends indexed custom target', {'python': true}],
    [
        'common/227 very long command line',
        {'python': true, 'skip': 'wasteful of cpu resources'},
    ],
    ['common/228 custom_target source', {'python': true}],
    ['common/229 disabler array addition'],
    ['common/230 external project', {'failing': true}],
    ['common/231 subdir files'],
    ['common/232 dependency allow_fallback'],
    ['common/233 wrap case'],
    ['common/234 get_file_contents'],
    ['common/235 invalid standard overridden to valid'],
    [
        'common/236 proper args splitting',
        {'kwargs': {'env': {'CFLAGS': '-DFOO -DBAR'}}},
    ],
    ['common/237 fstrings'],
    ['common/238 dependency include_type inconsistency'],
    ['common/239 includedir violation'],
    ['common/240 dependency native host == build'],
    ['common/241 set and get variable'],
    ['common/242 custom target feed', {'python': true}],
    ['common/243 escape++'],
    ['common/244 variable scope'],
    ['common/245 custom target index source', {'python': true}],
    ['common/246 dependency fallbacks'],
    ['common/247 deprecated option', {'python': true}],
    ['common/248 install_emptydir'],
    ['common/249 install_symlink'],
    ['common/250 system include dir', {'cpp': true}],
    ['common/251 add_project_dependencies'],
    [
        'common/252 install data structured',
        {
            'python': true,
            'option_matrix': {
                'python.purelibdir': ['python_purelib'],
            },
        },
    ],
    ['common/253 subproject dependency variables'],
    ['common/254 long output'],
    ['common/255 module warnings', {'skip': 'not relevant to muon'}],
    ['common/256 subproject extracted objects', {'cpp': true}],
    ['common/257 generated header dep'],
    ['common/258 subsubproject inplace'],
    ['common/259 preprocess'],
    ['common/260 declare_dependency objects'],
    [
        'common/261 testcase clause',
        {'skip': 'requires testcase language feature'},
    ],
    ['common/262 generator chain', {'python': true}],
    ['common/263 internal dependency includes in checks'],
    ['common/264 required keyword in has functions'],
    ['common/265 default_options dict'],
    ['common/266 format string'],
    ['common/267 default_options in find_program'],
    [
        'common/268 install functions and follow symlinks',
        {
            'skip': 'depends on symlinks being created prior to the test being run',
        },
    ],
    ['common/269 configure file output format', {'python': true}],
    ['common/270 int_to_str_fill'],
    ['common/271 env in generator.process', {'python': true}],
    ['common/272 unity', {'unity': 'requires unity'}],
    [
        'common/273 both libraries',
        {
            'option_matrix': {
                'use_dep': [true, false],
                'default_library': ['both', 'shared', 'static'],
                'default_both_libraries': ['auto', 'shared', 'static'],
            },
        },
    ],
    ['common/274 customtarget exe for test', {'python': true}],
    ['common/275 environment', {'python': true}],
    ['common/276 required keyword in compiles functions'],
    ['common/277 generator custom_tgt subdir'],
    ['common/278 custom target private dir'],
    ['common/279 pkgconfig override'],
    ['common/280 pkgconfig-gen'],

    # python
    ['python/1 basic', {'python': true}],
    ['python/2 extmodule', {'python': true, 'failing': true}],
    ['python/3 cython', {'python': true, 'failing': true}],
    [
        'python/4 custom target depends extmodule',
        {'python': true, 'failing': true},
    ],
    [
        'python/8 different python versions',
        {'python': true, 'failing': true},
    ],
    ['python/5 modules kwarg', {'python': true}],
    ['python/6 failing subproject', {'python': true, 'failing': true}],
    ['python/7 install path', {'python': true}],
    ['python/9 extmodule limited api', {'python': true, 'failing': true}],
    [
        'python/10 extmodule limited api disabled',
        {'python': true, 'failing': true},
    ],

    # native
    ['native/1 trivial'],
    ['native/2 global arg', {'cpp': true}],
    ['native/3 pipeline', {'python': true}],
    ['native/4 tryrun', {'cpp': true}],
    ['native/5 install script', {'python': true, 'skip_uninstall': true}],
    ['native/6 add language', {'cpp': true}],
    ['native/7 selfbuilt custom', {'cpp': true}],
    ['native/8 external program shebang parsing'],
    ['native/9 override with exe'],

    # nasm
    ['nasm/1 configure file'],
    ['nasm/2 asm language', {'failing': not host_is_x86}],
    ['nasm/3 nasm only'],
    ['nasm/4 through configure'],

    # keyval
    ['keyval/1 basic'],
    ['keyval/2 subdir'],
    ['keyval/3 load_config files'],
    ['keyval/4 load_config builddir'],

    # frameworks
    ['frameworks/6 gettext', {'python': true}],
    ['frameworks/7 gnome', {'python': true}],

    # objc
    ['objc/1 simple', {'objc': true}],
    ['objc/2 nsstring', {'objc': true}],
    ['objc/3 objc args', {'objc': true}],
    ['objc/4 c++ project objc subproject', {'objc': true}],
    ['objc/5 objfw', {'objc': true}],

    # objcpp
    ['objcpp/1 simple', {'objc': true}],
    ['objcpp/2 objc++ args', {'objc': true}],
    ['objcpp/3 objfw', {'objc': true}],
]
    name = t[0]
    props = t.get(1, {})

    if get_option('print-tests')
        message(name)
    endif

    props += {
        'source_root': meson.current_source_dir(),
    }

    tests += [[name, props]]
endforeach
